force-app/main/default/objects/CPQ2_Score_Multiplier__c/CPQ2_Score_Multiplier__c.object-meta.xml
<CustomObject>
    <label>Score Multiplier Table</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Score Multiplier Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Multiplier Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>