force-app/main/default/objects/CPQ2_Score_Multiplier__c/fields/CPQ2_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>