force-app/main/default/objects/CPQ2_Score_Multiplier__c/fields/CPQ2_Score_From__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Score_From__c</fullName>
    <label>Score From</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>