force-app/main/default/objects/CPQ2_Score_Multiplier__c/fields/CPQ2_Score_To__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Score_To__c</fullName>
    <label>Score To</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>