force-app/main/default/objects/CPQ2_Score_Multiplier__c/listViews/All_Scores.listView-meta.xml
<ListView>
    <fullName>All_Scores</fullName>
    <columns>NAME</columns>
    <columns>CPQ2_Score_From__c</columns>
    <columns>CPQ2_Score_To__c</columns>
    <columns>CPQ2_Multiplier__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>